--- a/colpali.ipynb
+++ b/colpali.ipynb
@@ -68,13 +68,13 @@
     "dataset = load_dataset(\"ibm/finqa\", trust_remote_code=True)\n",
     "\n",
     "# Access the splits\n",
-    "train_data = dataset['train'].to_pandas()\n",
+    "data = dataset['train'].to_pandas()\n",
     "validation_data = dataset['validation'].to_pandas()\n",
     "test_data = dataset['test'].to_pandas()\n",
     "\n",
-    "train_data = pd.concat([train_data, validation_data, test_data])\n",
-    "train_data.reset_index(drop=True, inplace=True)\n",
-    "train_data = train_data[[\"id\", \"question\", \"answer\"]]"
+    "data = pd.concat([data, validation_data, test_data])\n",
+    "data.reset_index(drop=True, inplace=True)\n",
+    "data = data[[\"id\", \"question\", \"answer\", \"gold_inds\"]]"
    ]
   },
   {
@@ -83,40 +83,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data[\"Company\"] = [row[0] for row in train_data.id.str.split(\"/\")]\n",
-    "train_data[\"Year\"] = [row[1] for row in train_data.id.str.split(\"/\")]"
+    "data[\"Company\"] = [row[0] for row in data.id.str.split(\"/\")]\n",
+    "data[\"Year\"] = [row[1] for row in data.id.str.split(\"/\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "docs/AAP/2006/\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "29159"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "unique_companies = set(train_data.Company.unique())\n",
+    "unique_companies = set(data.Company.unique())\n",
     "\n",
     "needed_years = {}\n",
     "\n",
     "for company in unique_companies:\n",
-    "    needed_years[company] = list(train_data[train_data.Company == company].Year.unique())\n",
+    "    needed_years[company] = list(data[data.Company == company].Year.unique())\n",
     "\n",
     "file_count = 0\n",
     "\n",
@@ -136,11 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = train_data[train_data[\"Company\"] == \"AAPL\"].iloc[0][\"question\"]\n",
-    "answer = train_data[train_data[\"Company\"] == \"AAPL\"].iloc[0][\"answer\"]\n",
-    "\n",
-    "print(f\"Query: {query}\")\n",
-    "print(f\"Answer: {answer}\")"
+    "data = data[(data.Company == \"AAL\" )& (data.Year == \"2014\")]\n",
+    "data.head(1)"
    ]
   },
   {
@@ -178,11 +157,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "companies = [\"AAPL\"]\n",
+    "companies = [\"AAL\"]\n",
     "\n",
     "for company in companies:\n",
-    "    for year in os.listdir(f\"docs/{company}/\"):\n",
-    "        for page in os.listdir(f\"docs/{company}/{year}/\"):\n",
+    "\n",
+    "    years = os.listdir(f\"docs/{company}/\")\n",
+    "    years = [\"2014\"]\n",
+    "\n",
+    "    for year in years:\n",
+    "\n",
+    "        pages = os.listdir(f\"docs/{company}/{year}/\")\n",
+    "\n",
+    "        for page in pages:\n",
+    "            \n",
     "            RAG.add_to_index(\n",
     "                input_item=f\"docs/{company}/{year}/{page}\",\n",
     "                store_collection_with_index=True,\n",
@@ -194,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retrieval "
+    "## Retrieve and Generate"
    ]
   },
   {
@@ -203,15 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = RAG.search(query, k=1, filter_metadata={\"Company\": \"AAPL\", \"Year\": \"2013\"})\n",
-    "results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generation"
+    "model = ChatOpenAI(model=\"gpt-4o\")"
    ]
   },
   {
@@ -220,35 +199,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ChatOpenAI(model=\"gpt-4o\")\n",
-    "message = HumanMessage(\n",
+    "def image_prompt(image, question):\n",
+    "\n",
+    "    query = f\"\"\"\n",
+    "    Answer the following query based solely on the provided image,  Give a short answer, 2-3 words at most. Then explain the steps you took to arrive at your answer.\n",
+    "\n",
+    "    Query: {question}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    message = HumanMessage(\n",
     "    content=[\n",
     "        {\"type\": \"text\", \"text\": query},\n",
     "        {\n",
     "            \"type\": \"image_url\",\n",
-    "            \"image_url\": {\"url\": f\"data:image/pdf;base64,{results[0]['base64']}\"},\n",
+    "            \"image_url\": {\"url\": f\"data:image/pdf;base64,{image}\"},\n",
     "        },\n",
     "    ],\n",
-    ")\n",
+    "    )\n",
     "\n",
-    "response = model.invoke([message])\n",
-    "response.content"
+    "    return message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Decode the base64 string\n",
-    "image_data = base64.b64decode(results[0]['base64'])\n",
+    "results = pd.DataFrame(columns=[\"Retrieved Context\",\"Correct Documents\", \"Generated Answer\", \"Correct Answer\"], index=data.index)\n",
     "\n",
-    "# Convert the bytes to an image\n",
-    "image = Image.open(BytesIO(image_data))\n",
+    "for idx, query in data.question.items():\n",
     "\n",
-    "# Display the image in the notebook\n",
-    "display(image)"
+    "    company = data.loc[idx].Company\n",
+    "    year = data.loc[idx].Year\n",
+    "\n",
+    "    retrieved = RAG.search(query, k = 1, filter_metadata={\"Company\": company, \"Year\": year})\n",
+    "    \n",
+    "    results.loc[idx, \"Retrieved Context\"] = company + \"/\" +  year + \"/\" +  retrieved[0].metadata[\"Page\"]\n",
+    "    results.loc[idx, \"Generated Answer\"] = model.invoke( [image_prompt(retrieved[0][\"base64\"], query) ]).content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results[\"Correct Answer\"] = data.answer\n",
+    "results[\"Correct Documents\"] = data.id\n",
+    "results[\"Golden Context\"] = data.gold_inds\n",
+    "\n",
+    "results.to_csv(\"colpali.csv\")"
    ]
   }
  ],
