chore: small changes in eval

--- a/vanilla.ipynb
+++ b/vanilla.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from concurrent.futures import ProcessPoolExecutor, ThreadPoolExecutor\n",
+    "import torch\n",
     "import pandas as pd \n",
+    "\n",
+    "from concurrent.futures import ProcessPoolExecutor, ThreadPoolExecutor\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "\n",
     "from pdf2image import convert_from_path\n",
     "import pytesseract\n",
     "\n",
@@ -22,7 +26,6 @@
     "from langchain_experimental.text_splitter import SemanticChunker\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_core.documents import Document\n",
-    "\n",
     "from langchain_core.runnables import RunnableLambda\n",
     "from langchain.prompts import PromptTemplate\n",
     "from pydantic import BaseModel, Field"
@@ -224,12 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-    "\n",
     "persist_directory = \".chroma\"\n",
     "\n",
     "docs = []\n",
@@ -269,7 +270,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mv/_dg3pqgn2zdf7f95_1dg07rw0000gn/T/ipykernel_72545/104589934.py:8: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "/var/folders/mv/_dg3pqgn2zdf7f95_1dg07rw0000gn/T/ipykernel_73713/104589934.py:8: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
       "  chroma_db = Chroma(persist_directory=persist_directory, embedding_function=embedder)\n"
      ]
     },
@@ -361,9 +362,30 @@
     "retrieve_chain = retriever | format_context \n",
     "\n",
     "generation_chain = RunnableLambda(lambda input: {\n",
-    "    \"context\": retrieve_chain.invoke(input[\"query\"]),  # Call retriever correctly with a string input\n",
+    "    \"context\": retrieve_chain.invoke(input[\"query\"]), \n",
     "    \"query\": input[\"query\"]\n",
     "}) | PROMPT | llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + torch.exp(-torch.tensor(x)))\n",
+    "\n",
+    "def rerank(query, documents, ids, top_k=1):\n",
+    "    scores = {}\n",
+    "    reranking = vo.rerank(query=query, documents=documents, model=\"rerank-2\", top_k=len(documents))\n",
+    "\n",
+    "    for i, r in enumerate(reranking.results):\n",
+    "        normalized_score = sigmoid(r.relevance_score).item()\n",
+    "        scores[ids[i]] = normalized_score\n",
+    "\n",
+    "    top_scorers = sorted(scores.items(), key=lambda item: item[1], reverse=True)[:top_k]\n",
+    "    return {id: score for id, score in top_scorers}"
    ]
   },
   {
@@ -378,9 +400,11 @@
     "    company = data.loc[idx].Company\n",
     "    year = data.loc[idx].Year\n",
     "\n",
-    "    retriever = chroma_db.as_retriever(search_kwargs={\"k\": 1, \"filter\": {\"$and\": [{\"company\": company}, {\"year\": year}]}})\n",
+    "    retriever = chroma_db.as_retriever(search_kwargs={\"k\": 20, \"filter\": {\"$and\": [{\"company\": company}, {\"year\": year}]}})\n",
     "    retrieved = retriever.invoke(query)\n",
-    "    results.loc[idx, \"Retrieved Context\"] = retrieved[0].metadata[\"id\"]\n",
+    "    retrieved = rerank(query, [doc.page_content for doc in retrieved], [doc.metadata[\"id\"] for doc in retrieved])\n",
+    "    \n",
+    "    results.loc[idx, \"Retrieved Context\"] = list(retrieved.keys())[0]\n",
     "    results.loc[idx, \"Generated Answer\"] = generation_chain.invoke(input = {\"query\": query}).content"
    ]
   },
