--- a/colpali.ipynb
+++ b/colpali.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from concurrent.futures import ProcessPoolExecutor, ThreadPoolExecutor\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "import pandas as pd \n",
     "\n",
     "from datasets import load_dataset\n",
@@ -20,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('hf_key.txt', 'r') as file:\n",
+    "with open('keys/hf_key.txt', 'r') as file:\n",
     "    hf_key = file.read().strip()\n",
     "\n",
-    "with open(\"openai_api_key.txt\", \"r\") as file:\n",
+    "with open(\"keys/openai_api_key.txt\", \"r\") as file:\n",
     "    openai_key = file.read().strip()\n",
     "\n",
     "os.environ[\"HF_TOKEN\"] = hf_key\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +86,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "docs/AAP/2006/\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "29159"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_companies = set(data.Company.unique())\n",
     "\n",
@@ -110,12 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data[(data.Company == \"AAL\" )& (data.Year == \"2014\")]\n",
-    "data.head(1)"
+    "data = data[(data.Company == \"AAL\" )& (data.Year == \"2014\")]"
    ]
   },
   {
@@ -127,18 +145,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verbosity is set to 1 (active). Pass verbose=0 to make quieter.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Qwen2VLRotaryEmbedding` can now be fully parameterized by passing the model config through the `config` argument. All other arguments will be removed in v4.46\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d540a01703024cb496c2c1c5d845c0a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "RAG = RAGMultiModalModel.from_pretrained(\"vidore/colqwen2-v1.0\", device=\"mps\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overwrite is on. Deleting existing index finqa to build a new one.\n",
+      "Indexing file: docs/temp/page_108.pdf\n",
+      "Added page 1 of document 0 to index.\n",
+      "Index exported to .byaldi/finqa\n",
+      "Index exported to .byaldi/finqa\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'docs/temp/page_108.pdf'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "RAG.index(\n",
     "    input_path=\"docs/temp/\",\n",
@@ -153,24 +222,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define companies\n",
     "companies = [\"AAL\"]\n",
     "\n",
-    "for company in companies:\n",
+    "# Define a function to process a single page and add it to the RAG index\n",
+    "def process_page_for_index(company, year, page):\n",
+    "    \n",
+    "    RAG.add_to_index(\n",
+    "        input_item=f\"docs/{company}/{year}/{page}\",\n",
+    "        store_collection_with_index=True,\n",
+    "        metadata={\"Company\": company, \"Year\": year, \"Page\": page},\n",
+    "    )\n",
     "\n",
-    "    years = os.listdir(f\"docs/{company}/\")\n",
-    "    years = [\"2014\"]\n",
+    "# Use ThreadPoolExecutor for parallel processing\n",
+    "with ThreadPoolExecutor() as executor:\n",
+    "    futures = []\n",
     "\n",
-    "    for year in years:\n",
+    "    for company in companies:\n",
+    "        years = os.listdir(f\"docs/{company}/\")\n",
+    "        years = [\"2014\"]\n",
     "\n",
-    "        pages = os.listdir(f\"docs/{company}/{year}/\")\n",
+    "        for year in years:\n",
+    "            pages = os.listdir(f\"docs/{company}/{year}/\")\n",
     "\n",
-    "        for page in pages:\n",
-    "            \n",
-    "            RAG.add_to_index(\n",
-    "                input_item=f\"docs/{company}/{year}/{page}\",\n",
-    "                store_collection_with_index=True,\n",
-    "                metadata={\"Company\": company, \"Year\": year, \"Page\" : page},\n",
-    "            )"
+    "            # Submit tasks for each page\n",
+    "            for page in pages:\n",
+    "                futures.append(executor.submit(process_page_for_index, company, year, page))\n",
+    "\n",
+    "    # Wait for all tasks to complete\n",
+    "    for future in futures:\n",
+    "        future.result()"
    ]
   },
   {
@@ -218,26 +299,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = pd.DataFrame(columns=[\"Retrieved Context\",\"Correct Documents\", \"Generated Answer\", \"Correct Answer\"], index=data.index)\n",
     "\n",
-    "for idx, query in data.question.items():\n",
+    "# Define the function to process a single item\n",
+    "def process_item(idx):\n",
+    "    query = data.loc[idx, \"question\"]\n",
+    "    company = data.loc[idx, \"Company\"]\n",
+    "    year = data.loc[idx, \"Year\"]\n",
     "\n",
-    "    company = data.loc[idx].Company\n",
-    "    year = data.loc[idx].Year\n",
+    "    # Perform retrieval\n",
+    "    retrieved = RAG.search(query, k=1, filter_metadata={\"Company\": company, \"Year\": year})\n",
     "\n",
-    "    retrieved = RAG.search(query, k = 1, filter_metadata={\"Company\": company, \"Year\": year})\n",
-    "    \n",
-    "    results.loc[idx, \"Retrieved Context\"] = company + \"/\" +  year + \"/\" +  retrieved[0].metadata[\"Page\"]\n",
-    "    results.loc[idx, \"Generated Answer\"] = model.invoke( [image_prompt(retrieved[0][\"base64\"], query) ]).content"
+    "    # Populate the results row\n",
+    "    retrieved_context = f\"{company}/{year}/{retrieved[0].metadata['Page']}\"\n",
+    "    generated_answer = model.invoke([image_prompt(retrieved[0][\"base64\"], query)]).content\n",
+    "\n",
+    "    return idx, retrieved_context, generated_answer\n",
+    "\n",
+    "# Use ThreadPoolExecutor for parallel processing\n",
+    "with ThreadPoolExecutor() as executor:\n",
+    "    futures = [executor.submit(process_item, idx) for idx in data.index]\n",
+    "\n",
+    "    # Gather results\n",
+    "    for future in futures:\n",
+    "        idx, retrieved_context, generated_answer = future.result()\n",
+    "        results.loc[idx, \"Retrieved Context\"] = retrieved_context\n",
+    "        results.loc[idx, \"Generated Answer\"] = generated_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
