--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"openai_api_key.txt\", \"r\") as file:\n",
+    "with open(\"keys/openai_api_key.txt\", \"r\") as file:\n",
     "    openai_key = file.read().strip()\n",
     "\n",
     "os.environ[\"OPENAI_API_KEY\"] = openai_key"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAL/2014/page_89.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_80.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_89.pdf AAL/2014/page_201.pdf\n",
+      "AAL/2014/page_92.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_18.pdf AAL/2014/page_84.pdf\n",
+      "AAL/2014/page_89.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_80.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_92.pdf AAL/2014/page_201.pdf\n",
+      "AAL/2014/page_89.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_80.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_92.pdf AAL/2014/page_83.pdf\n",
+      "AAL/2014/page_18.pdf AAL/2014/page_73.pdf\n",
+      "AAL/2014/page_80.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_15.pdf AAL/2014/page_16.pdf\n",
+      "AAL/2014/page_15.pdf AAL/2014/page_16.pdf\n",
+      "AAL/2014/page_15.pdf AAL/2014/page_16.pdf\n",
+      "AAL/2014/page_15.pdf AAL/2014/page_16.pdf\n",
+      "\n",
+      "0.32\n"
+     ]
+    }
+   ],
    "source": [
     "correct = 0\n",
     "for idx in results.index:\n",
@@ -100,6 +126,7 @@
     "        actual_output=actual_output,\n",
     "        expected_output=expected_output,\n",
     "    )\n",
+    "    \n",
     "    correctness_metric.measure(test_case)\n",
     "\n",
     "    results.loc[idx, \"Correctness Score\"] = correctness_metric.score\n",
@@ -124,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAL/2014/page_89.pdf AAL/2014/page_80.pdf\n",
+      "AAL/2014/page_89.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_18.pdf AAL/2014/page_84.pdf\n",
+      "AAL/2014/page_89.pdf AAL/2014/page_80.pdf\n",
+      "AAL/2014/page_92.pdf AAL/2014/page_130.pdf\n",
+      "AAL/2014/page_89.pdf AAL/2014/page_80.pdf\n",
+      "AAL/2014/page_92.pdf AAL/2014/page_83.pdf\n",
+      "AAL/2014/page_15.pdf AAL/2014/page_16.pdf\n",
+      "\n",
+      "0.68\n"
+     ]
+    }
+   ],
    "source": [
     "correct = 0\n",
     "for idx in results.index:\n",
@@ -166,6 +210,7 @@
     "        actual_output=actual_output,\n",
     "        expected_output=expected_output,\n",
     "    )\n",
+    "    \n",
     "    correctness_metric.measure(test_case)\n",
     "\n",
     "    results.loc[idx, \"Correctness Score\"] = correctness_metric.score\n",
@@ -190,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +271,7 @@
        "0.5483227519398131"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +291,7 @@
        "0.6039156988492254"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
