--- a/vanilla.ipynb
+++ b/vanilla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,10 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"openai_api_key.txt\", \"r\") as file:\n",
+    "with open(\"keys/openai_api_key.txt\", \"r\") as file:\n",
     "    openai_key = file.read().strip()\n",
     "\n",
-    "with open(\"voyage_api_key.txt\", \"r\") as file:\n",
+    "with open(\"keys/voyage_api_key.txt\", \"r\") as file:\n",
     "    voyage_api_key = file.read().strip()\n",
     "\n",
     "os.environ[\"OPENAI_API_KEY\"] = openai_key"
@@ -171,18 +171,34 @@
     "\n",
     "    companies = [\"AAL\"]\n",
     "\n",
-    "    for company in companies:\n",
+    "    # Define the function to process a single page\n",
+    "    def process_page(company, year, page):\n",
+    "        image = convert_from_path(f\"docs/{company}/{year}/{page}\")[0]\n",
+    "        text = pytesseract.image_to_string(image)\n",
+    "        return f\"{company}/{year}/{page}\", text\n",
     "\n",
-    "        years = os.listdir(f\"docs/{company}/\")\n",
-    "        years = [\"2014\"]\n",
+    "    # Define companies and years\n",
+    "    companies = [\"AAL\"]\n",
     "\n",
-    "        for year in years:\n",
+    "    with ThreadPoolExecutor() as executor:\n",
+    "        \n",
+    "        futures = []\n",
     "\n",
-    "            pages = os.listdir(f\"docs/{company}/{year}/\")\n",
+    "        for company in companies:\n",
+    "            years = os.listdir(f\"docs/{company}/\")\n",
+    "            years = [\"2014\"]\n",
     "\n",
-    "            for page in pages:\n",
-    "                image = convert_from_path(f\"docs/{company}/{year}/{page}\")[0]\n",
-    "                documents[f\"{company}/{year}/{page}\"] = pytesseract.image_to_string(image)"
+    "            for year in years:\n",
+    "                pages = os.listdir(f\"docs/{company}/{year}/\")\n",
+    "\n",
+    "                # Submit tasks for each page\n",
+    "                for page in pages:\n",
+    "                    futures.append(executor.submit(process_page, company, year, page))\n",
+    "\n",
+    "        # Gather results\n",
+    "        for future in futures:\n",
+    "            page_key, text = future.result()\n",
+    "            documents[page_key] = text"
    ]
   },
   {
@@ -227,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +286,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mv/_dg3pqgn2zdf7f95_1dg07rw0000gn/T/ipykernel_73713/104589934.py:8: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
+      "/var/folders/mv/_dg3pqgn2zdf7f95_1dg07rw0000gn/T/ipykernel_76088/104589934.py:8: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
       "  chroma_db = Chroma(persist_directory=persist_directory, embedding_function=embedder)\n"
      ]
     },
@@ -396,16 +412,33 @@
    "source": [
     "results = pd.DataFrame(columns=[\"Retrieved Context\",\"Correct Documents\", \"Generated Answer\", \"Correct Answer\"], index=data.index)\n",
     "\n",
-    "for idx, query in data.question.items():\n",
-    "    company = data.loc[idx].Company\n",
-    "    year = data.loc[idx].Year\n",
+    "# Define a function to process each item\n",
+    "def process_item(idx):\n",
+    "    query = data.loc[idx, \"question\"]\n",
+    "    company = data.loc[idx, \"Company\"]\n",
+    "    year = data.loc[idx, \"Year\"]\n",
     "\n",
+    "    # Initialize retriever\n",
     "    retriever = chroma_db.as_retriever(search_kwargs={\"k\": 20, \"filter\": {\"$and\": [{\"company\": company}, {\"year\": year}]}})\n",
-    "    retrieved = retriever.invoke(query)\n",
-    "    retrieved = rerank(query, [doc.page_content for doc in retrieved], [doc.metadata[\"id\"] for doc in retrieved])\n",
     "    \n",
-    "    results.loc[idx, \"Retrieved Context\"] = list(retrieved.keys())[0]\n",
-    "    results.loc[idx, \"Generated Answer\"] = generation_chain.invoke(input = {\"query\": query}).content"
+    "    # Retrieve and rerank\n",
+    "    retrieved_docs = retriever.invoke(query)\n",
+    "    retrieved = rerank(query, [doc.page_content for doc in retrieved_docs], [doc.metadata[\"id\"] for doc in retrieved_docs])\n",
+    "    \n",
+    "    # Populate results\n",
+    "    retrieved_context = list(retrieved.keys())[0]\n",
+    "    generated_answer = generation_chain.invoke(input={\"query\": query}).content\n",
+    "\n",
+    "    return idx, retrieved_context, generated_answer\n",
+    "\n",
+    "with ThreadPoolExecutor() as executor:\n",
+    "    futures = [executor.submit(process_item, idx) for idx in data.index]\n",
+    "\n",
+    "    # Gather results\n",
+    "    for future in futures:\n",
+    "        idx, retrieved_context, generated_answer = future.result()\n",
+    "        results.loc[idx, \"Retrieved Context\"] = retrieved_context\n",
+    "        results.loc[idx, \"Generated Answer\"] = generated_answer"
    ]
   },
   {
