chore: asyncio for parallelizm

--- a/colpali.ipynb
+++ b/colpali.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,10 @@
     "from concurrent.futures import ProcessPoolExecutor, ThreadPoolExecutor\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "import pandas as pd \n",
+    "import asyncio\n",
+    "import os\n",
+    "import psutil\n",
+    "import nest_asyncio\n",
     "\n",
     "from datasets import load_dataset\n",
     "\n",
@@ -21,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,27 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "docs/AAP/2006/\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "29159"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique_companies = set(data.Company.unique())\n",
     "\n",
@@ -129,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,36 +133,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Verbosity is set to 1 (active). Pass verbose=0 to make quieter.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Qwen2VLRotaryEmbedding` can now be fully parameterized by passing the model config through the `config` argument. All other arguments will be removed in v4.46\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d540a01703024cb496c2c1c5d845c0a7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "RAG = RAGMultiModalModel.from_pretrained(\"vidore/colqwen2-v1.0\", device=\"mps\")"
    ]
@@ -220,23 +177,53 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory usage: 84.4% - Processing AAL/2014/page_93.pdf\n",
+      "Memory usage: 84.4% - Processing AAL/2014/page_225.pdf\n",
+      "Memory usage: 84.4% - Processing AAL/2014/page_219.pdf\n",
+      "Memory usage: 84.4% - Processing AAL/2014/page_218.pdf\n",
+      "Added page 1 of document 2 to index.Added page 1 of document 3 to index.\n",
+      "Added page 1 of document 1 to index.\n",
+      "Added page 1 of document 4 to index.\n",
+      "\n",
+      "Index exported to .byaldi/finqa\n",
+      "Index exported to .byaldi/finqa\n",
+      "Memory usage: 92.0% - Processing AAL/2014/page_230.pdf\n",
+      "Index exported to .byaldi/finqa\n",
+      "Memory usage: 92.0% - Processing AAL/2014/page_224.pdf\n",
+      "Memory usage: 92.0% - Processing AAL/2014/page_92.pdf\n",
+      "Index exported to .byaldi/finqa\n",
+      "Memory usage: 92.0% - Processing AAL/2014/page_193.pdf\n"
+     ]
+    }
+   ],
    "source": [
+    "# Apply nest_asyncio to enable nested event loops in Jupyter\n",
+    "nest_asyncio.apply()\n",
+    "\n",
     "# Define companies\n",
     "companies = [\"AAL\"]\n",
     "\n",
-    "# Define a function to process a single page and add it to the RAG index\n",
-    "def process_page_for_index(company, year, page):\n",
+    "# Define an async function to process a single page\n",
+    "async def process_page_for_index(company, year, page):\n",
     "    \n",
-    "    RAG.add_to_index(\n",
+    "    print(f\"Memory usage: {psutil.virtual_memory().percent}% - Processing {company}/{year}/{page}\")\n",
+    "    \n",
+    "    # Simulate asynchronous RAG indexing (replace with actual async-compatible call if possible)\n",
+    "    await asyncio.to_thread(\n",
+    "        RAG.add_to_index,\n",
     "        input_item=f\"docs/{company}/{year}/{page}\",\n",
     "        store_collection_with_index=True,\n",
     "        metadata={\"Company\": company, \"Year\": year, \"Page\": page},\n",
     "    )\n",
     "\n",
-    "# Use ThreadPoolExecutor for parallel processing\n",
-    "with ThreadPoolExecutor() as executor:\n",
-    "    futures = []\n",
+    "# Define an async function to process all companies, years, and pages\n",
+    "async def process_all():\n",
+    "    tasks = []\n",
     "\n",
     "    for company in companies:\n",
     "        years = os.listdir(f\"docs/{company}/\")\n",
@@ -245,13 +232,23 @@
     "        for year in years:\n",
     "            pages = os.listdir(f\"docs/{company}/{year}/\")\n",
     "\n",
-    "            # Submit tasks for each page\n",
+    "            # Create async tasks for each page\n",
     "            for page in pages:\n",
-    "                futures.append(executor.submit(process_page_for_index, company, year, page))\n",
+    "                tasks.append(process_page_for_index(company, year, page))\n",
     "\n",
-    "    # Wait for all tasks to complete\n",
-    "    for future in futures:\n",
-    "        future.result()"
+    "    # Run all tasks concurrently with a limit on concurrency\n",
+    "    concurrency_limit = 4\n",
+    "    semaphore = asyncio.Semaphore(concurrency_limit)\n",
+    "\n",
+    "    async def semaphore_task(task):\n",
+    "        async with semaphore:\n",
+    "            return await task\n",
+    "\n",
+    "    # Await all tasks\n",
+    "    await asyncio.gather(*(semaphore_task(task) for task in tasks))\n",
+    "\n",
+    "# Run the asyncio event loop within Jupyter\n",
+    "await process_all()"
    ]
   },
   {
