chore: leave the bare skeleton for indexing for now

--- a/colpali.ipynb
+++ b/colpali.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,31 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "overwrite is on. Deleting existing index finqa to build a new one.\n",
-      "Indexing file: docs/temp/page_108.pdf\n",
-      "Added page 1 of document 0 to index.\n",
-      "Index exported to .byaldi/finqa\n",
-      "Index exported to .byaldi/finqa\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{0: 'docs/temp/page_108.pdf'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "RAG.index(\n",
     "    input_path=\"docs/temp/\",\n",
@@ -177,30 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Memory usage: 84.4% - Processing AAL/2014/page_93.pdf\n",
-      "Memory usage: 84.4% - Processing AAL/2014/page_225.pdf\n",
-      "Memory usage: 84.4% - Processing AAL/2014/page_219.pdf\n",
-      "Memory usage: 84.4% - Processing AAL/2014/page_218.pdf\n",
-      "Added page 1 of document 2 to index.Added page 1 of document 3 to index.\n",
-      "Added page 1 of document 1 to index.\n",
-      "Added page 1 of document 4 to index.\n",
-      "\n",
-      "Index exported to .byaldi/finqa\n",
-      "Index exported to .byaldi/finqa\n",
-      "Memory usage: 92.0% - Processing AAL/2014/page_230.pdf\n",
-      "Index exported to .byaldi/finqa\n",
-      "Memory usage: 92.0% - Processing AAL/2014/page_224.pdf\n",
-      "Memory usage: 92.0% - Processing AAL/2014/page_92.pdf\n",
-      "Index exported to .byaldi/finqa\n",
-      "Memory usage: 92.0% - Processing AAL/2014/page_193.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Apply nest_asyncio to enable nested event loops in Jupyter\n",
     "nest_asyncio.apply()\n",
@@ -210,12 +165,10 @@
     "\n",
     "# Define an async function to process a single page\n",
     "async def process_page_for_index(company, year, page):\n",
-    "    \n",
     "    print(f\"Memory usage: {psutil.virtual_memory().percent}% - Processing {company}/{year}/{page}\")\n",
     "    \n",
-    "    # Simulate asynchronous RAG indexing (replace with actual async-compatible call if possible)\n",
-    "    await asyncio.to_thread(\n",
-    "        RAG.add_to_index,\n",
+    "    # Simulate asynchronous RAG indexing\n",
+    "    await RAG.add_to_index(\n",
     "        input_item=f\"docs/{company}/{year}/{page}\",\n",
     "        store_collection_with_index=True,\n",
     "        metadata={\"Company\": company, \"Year\": year, \"Page\": page},\n",
@@ -223,6 +176,14 @@
     "\n",
     "# Define an async function to process all companies, years, and pages\n",
     "async def process_all():\n",
+    "    concurrency_limit = 4\n",
+    "    semaphore = asyncio.Semaphore(concurrency_limit)\n",
+    "\n",
+    "    async def semaphore_task(company, year, page):\n",
+    "        async with semaphore:\n",
+    "            await process_page_for_index(company, year, page)\n",
+    "\n",
+    "    # Create a list to store all created tasks\n",
     "    tasks = []\n",
     "\n",
     "    for company in companies:\n",
@@ -232,20 +193,12 @@
     "        for year in years:\n",
     "            pages = os.listdir(f\"docs/{company}/{year}/\")\n",
     "\n",
-    "            # Create async tasks for each page\n",
+    "            # Create tasks for each page\n",
     "            for page in pages:\n",
-    "                tasks.append(process_page_for_index(company, year, page))\n",
+    "                tasks.append(asyncio.create_task(semaphore_task(company, year, page)))\n",
     "\n",
-    "    # Run all tasks concurrently with a limit on concurrency\n",
-    "    concurrency_limit = 4\n",
-    "    semaphore = asyncio.Semaphore(concurrency_limit)\n",
-    "\n",
-    "    async def semaphore_task(task):\n",
-    "        async with semaphore:\n",
-    "            return await task\n",
-    "\n",
-    "    # Await all tasks\n",
-    "    await asyncio.gather(*(semaphore_task(task) for task in tasks))\n",
+    "    # Await all created tasks\n",
+    "    await asyncio.gather(*tasks)\n",
     "\n",
     "# Run the asyncio event loop within Jupyter\n",
     "await process_all()"
